# rtos

./: CMakeLists.txt  I2C.md  MsgBus.hpp  QMsg.hpp  README.md  RTOS_SPI.md  RtosI2C.hpp  RtosMsgBuffer.hpp  RtosMsgBufferTask.hpp  RtosQueue.hpp  RtosTask.hpp  StaticString.hpp  backend.hpp  idf_component.yml  rtosutils.h
FreeRTOS/: RtosEventTimerImpl.hpp  RtosI2CImpl.hpp  RtosMessageBufferImpl.hpp  RtosSpiImpl.hpp
Linux/: RtosI2CImpl.hpp  RtosSpiImpl.hpp
Zephyr/: RtosEventTimerImpl.hpp  RtosI2CImpl.hpp  RtosMessageBufferImpl.hpp  RtosQueueImpl.hpp  RtosSpiImpl.hpp  RtosTaskImpl.hpp
backends/espidf/: rtos_backend.cpp  rtos_final_log_output.cpp  rtos_i2c.cpp  rtos_nvs.cpp  rtos_spi.cpp  rtos_watchdog.cpp
backends/linux/: rtos_backend.cpp  rtos_i2c.cpp  rtos_nvs.cpp  rtos_spi.cpp  rtos_watchdog.cpp
backends/zephyr/: rtos_backend.cpp  rtos_i2c.cpp  rtos_nvs.cpp  rtos_spi.cpp  rtos_watchdog.cpp
include/: AppInfo.hpp  Gpio.hpp  Gpio.md  MSGBUS.md  MessageTask.hpp  Metrics.hpp  MsgBus.hpp  MsgSchedulerTask.hpp  QMsg.hpp  RTOS_PSRAM_README.md  RtosI2C.hpp  RtosLog.hpp  RtosMsgBuffer.hpp  RtosMsgBufferTask.hpp  RtosQueue.hpp  RtosSpi.hpp  RtosTask.hpp  SingletonTask.hpp  StaticString.hpp  backend.hpp  debug.hpp  rtos_psram.hpp  time.hpp
include/buffers/: RingBuffer.hpp
include/config/: ConfigManager.hpp  ConfigStore.hpp  JsonCodec.hpp  Observer.hpp  README.md  Result.hpp  Schema.hpp
include/envelope/: ENVELOPE.md  README.md  envelope.hpp
include/monitor/: MonitorPool.hpp  ParamConfig.hpp  ParamMonitor.hpp  ParamMonitorPool.hpp
include/rtos/: BoundedString.hpp  FinalLogOutput.hpp  Gpio.hpp  Gpio.md  I2C.hpp  Log.hpp  LogSinks.hpp  Metrics.hpp  MsgBuffer.hpp  MsgBufferTask.hpp  MsgBus.hpp  MsgBus.md  MsgSchedulerTask.hpp  Nvs.hpp  QMsg.hpp  Queue.hpp  Singleton.hpp  Spi.hpp  StaticString.hpp  Task.hpp  assert.hpp  backend.hpp  debug.hpp  psram.hpp  psram.md  time.hpp  time.md  watchdog.hpp
include/rtos/buffers/: RINGBUFFER.md  RingBuffer.hpp
include/rtos/envelope/: envelope.hpp  envelope_inspect.hpp
include/rtos/statistics/: MinMaxAvg.hpp  MinMaxAvg.md  OnlineStats.hpp  OnlineStatsAdvanced.hpp
include/statistics/: MinMaxAvg.hpp  MinMaxAvg.md  OnlineStatistics.hpp  OnlineStats.hpp  OnlineStatsAdvanced.hpp
src/: rtos_common.cpp  rtos_freertos.cpp  rtos_freertos_espidf.cpp  rtos_linux.cpp  rtos_zephyr.cpp
tests/: CMakeLists.txt  final_log_output_test.cpp  log_test.cpp  ring_buffer_test.cpp
tests/stubs/: esp_log.h
unused/: MessageTimer.hpp  RtosEventTimer.hpp  RtosQueueImpl.hpp  RtosTaskImpl.hpp
